--- a/mapconverter/README.asciidoc
+++ b/mapconverter/README.asciidoc
@@ -11,7 +11,11 @@ mapconverter source.[elm|xml] target.[elm|xml] [options]
 ++++
 
 Options are:
---set-cluster x1,y1,x2,y2,i:: Add area to cluster i
---set-height x1,y1,x2,y2,h:: Set area to height h
---use-area:: Print a use_area template for selected objects
---object-id id:: Add object id to list of objects to print
+--set-cluster x1,y1,x2,y2,i:: 
+	Add area to cluster i
+--set-height x1,y1,x2,y2,h:: 
+	Set area to height h
+--use-area:: 
+	Print a use_area template for selected objects
+--object-id id:: 
+	Add object id to list of objects to print
